<resources>
    <string name="app_name">PersonActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="age">Age</string>
    <string name="country_state">Country, State</string>
    <string name="birthdate">BirthDate</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="countrystateLabel">Country/State</string>
    <string name="set">Set</string>
    <string name="donebtn">Done</string>
    <string name="set_date">Set</string>
</resources>
