<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ashu.personactivity.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"

        tools:ignore="ExtraText,UselessParent">-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">
            <TextView
                android:text="@string/first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="20dp"
                android:id="@+id/textView2"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:textSize="12sp"
                tools:ignore="ObsoleteLayoutParam" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text=""
                android:ems="10"

                android:layout_below="@+id/textView2"
                android:layout_alignStart="@+id/textView2"
                android:layout_marginTop="20dp"
                android:id="@+id/fname"
                android:textSize="14sp"
                tools:ignore="LabelFor,ObsoleteLayoutParam" />

            <TextView
                android:text="@string/last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText"
                android:layout_alignEnd="@+id/textView2"
                android:layout_marginTop="20dp"
                android:id="@+id/textView3"
                android:textSize="12sp"
                tools:ignore="ObsoleteLayoutParam" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text=""

                android:ems="10"
                android:layout_below="@+id/textView3"
                android:layout_alignStart="@+id/textView3"
                android:layout_marginTop="20dp"
                android:id="@+id/lname"
                android:textSize="14sp"
                tools:ignore="LabelFor,ObsoleteLayoutParam" />

            <TextView
                android:text="@string/age"
                android:layout_width="58dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_centerVertical="true"
                android:layout_alignStart="@+id/editText2"
                android:id="@+id/textView4"
                android:layout_weight="0.08"
                android:textSize="12sp"
                tools:ignore="ObsoleteLayoutParam" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"

                android:layout_below="@+id/textView4"
                android:layout_alignStart="@+id/textView4"
                android:layout_marginTop="20dp"
                android:id="@+id/age"
                android:textSize="14sp"
                tools:ignore="LabelFor,ObsoleteLayoutParam" />

            <TextView
        android:text="@string/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/textView5"
        android:layout_below="@+id/editText3"
        android:layout_alignStart="@+id/editText"
        android:textSize="12sp"
                android:layout_weight="0.15"
                tools:ignore="ObsoleteLayoutParam" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/email"

                android:layout_marginTop="20dp"
                tools:ignore="LabelFor" />

            <TextView
                android:text="Phone Number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                android:layout_marginTop="20dp"
                tools:ignore="HardcodedText" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:layout_marginTop="20dp"
                android:id="@+id/phone"
                tools:ignore="LabelFor" />

            <TextView
        android:text="@string/birthdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText4"
        android:layout_alignStart="@+id/editText4"
        android:layout_marginTop="20dp"
        android:id="@+id/textView6"
        android:textSize="12sp"
                tools:ignore="ObsoleteLayoutParam" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
    <TextView
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/textView6"
        android:layout_alignStart="@+id/editText3"
        android:layout_marginTop="20dp"
        android:id="@+id/dob"
        android:textSize="14sp"
        android:hint="DD-MM-YYYY"
        tools:ignore="HardcodedText,ObsoleteLayoutParam,TextViewEdits" />

                <Button
                    android:text="@string/set_date"
                    android:onClick="setd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:id="@+id/setDate"
                    android:layout_marginTop="20dp"
                    android:layout_row="0"
                    android:layout_column="1"
                    tools:ignore="RtlHardcoded" />

            </GridLayout>>
            <TextView
                android:text="@string/countrystateLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                tools:textSize="12sp"
                android:layout_weight="0.06"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/scrollView2"
                android:id="@+id/country"
                android:textSize="14sp"
                android:layout_marginTop="20dp"
                android:hint="@string/country_state"
                android:layout_weight="0.01"
                tools:ignore="ObsoleteLayoutParam,TextViewEdits" />

            <Button
                android:text="@string/set"
                android:onClick="setc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/setCountry"
                android:layout_marginTop="20dp"/>

            <Button
                android:text="@string/donebtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/done" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
